--- a/index.html
+++ b/index.html
@@ -1,81 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Scriptoria Research</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-100 text-gray-800 font-sans">
 
   <!-- Header -->
-  <header class="bg-white shadow-md p-4">
+  <header class="bg-white shadow-md p-4 sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-600">Scriptoria Research</h1>
-      <nav>
-        <a href="#services" class="mx-2 text-gray-600 hover:text-indigo-600">Services</a>
-        <a href="#about" class="mx-2 text-gray-600 hover:text-indigo-600">About</a>
-        <a href="#contact" class="mx-2 text-gray-600 hover:text-indigo-600">Contact</a>
+      <h1 class="text-3xl font-extrabold text-indigo-600 tracking-wide animate-slide-in-left">Scriptoria Research</h1>
+      <nav class="space-x-4">
+        <a href="#services" class="hover:text-indigo-600 font-medium">Services</a>
+        <a href="#about" class="hover:text-indigo-600 font-medium">About</a>
+        <a href="#contact" class="hover:text-indigo-600 font-medium">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="bg-indigo-50 py-12">
-    <div class="container mx-auto text-center">
-      <h2 class="text-4xl font-semibold mb-4 text-indigo-700">Expert Research Writing Services</h2>
-      <p class="text-lg text-gray-600 mb-6">Supporting students, scholars, and professionals with high-quality, custom research writing.</p>
-      <a href="#contact" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Get in Touch</a>
+  <!-- Hero -->
+  <section class="bg-gradient-to-r from-indigo-50 to-purple-100 py-20">
+    <div class="container mx-auto text-center px-4">
+      <h2 class="text-5xl font-bold text-indigo-700 mb-4 animate-pulse">Research Solutions that Excel</h2>
+      <p class="text-xl text-gray-700 mb-8">Trusted by scholars, students, and professionals for top-tier writing support.</p>
+      <a href="#contact" class="btn-primary">Get Started</a>
     </div>
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-12 bg-white">
-    <div class="container mx-auto">
-      <h3 class="text-3xl font-bold text-center text-indigo-700 mb-8">Our Services</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="p-6 bg-gray-100 rounded-xl shadow">
-          <h4 class="text-xl font-semibold mb-2">Thesis & Dissertation Help</h4>
-          <p>From literature review to final formatting – we guide you every step of the way.</p>
+  <section id="services" class="py-16 bg-white">
+    <div class="container mx-auto text-center px-4">
+      <h3 class="text-4xl font-bold text-indigo-700 mb-12">What We Offer</h3>
+      <div class="grid md:grid-cols-3 gap-10">
+        <div class="service-card">
+          <i class="ph ph-book-open text-4xl text-indigo-600 mb-4"></i>
+          <h4 class="text-xl font-semibold mb-2">Thesis & Dissertation Support</h4>
+          <p class="text-gray-600">Comprehensive guidance from topic to submission.</p>
         </div>
-        <div class="p-6 bg-gray-100 rounded-xl shadow">
+        <div class="service-card">
+          <i class="ph ph-file-text text-4xl text-indigo-600 mb-4"></i>
           <h4 class="text-xl font-semibold mb-2">Research Paper Writing</h4>
-          <p>Customized, original papers tailored to your academic or journal requirements.</p>
+          <p class="text-gray-600">High-quality, original content tailored to your field.</p>
         </div>
-        <div class="p-6 bg-gray-100 rounded-xl shadow">
+        <div class="service-card">
+          <i class="ph ph-pencil-line text-4xl text-indigo-600 mb-4"></i>
           <h4 class="text-xl font-semibold mb-2">Editing & Proofreading</h4>
-          <p>Polishing your drafts to ensure clarity, grammar accuracy, and publication-readiness.</p>
+          <p class="text-gray-600">Polishing your work for clarity and excellence.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- About -->
-  <section id="about" class="py-12 bg-gray-50">
-    <div class="container mx-auto text-center">
-      <h3 class="text-3xl font-bold text-indigo-700 mb-4">About Scriptoria Research</h3>
-      <p class="text-gray-600 max-w-2xl mx-auto">We are a team of academic writers, editors, and research consultants committed to excellence in scholarly writing. With backgrounds in science, humanities, and social sciences, we bring precision, clarity, and integrity to every project.</p>
+  <section id="about" class="py-20 bg-indigo-50">
+    <div class="container mx-auto px-4 text-center">
+      <h3 class="text-4xl font-bold text-indigo-700 mb-6">Who We Are</h3>
+      <p class="max-w-3xl mx-auto text-lg text-gray-700">
+        Scriptoria Research is a collaborative of PhD-level writers, editors, and consultants passionate about academic excellence. Whether you're in the sciences, humanities, or social research—we're here to empower your academic journey.
+      </p>
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-12 bg-white">
-    <div class="container mx-auto text-center">
-      <h3 class="text-3xl font-bold text-indigo-700 mb-4">Contact Us</h3>
-      <p class="text-gray-600 mb-6">Ready to start your project? Reach out today.</p>
-      <form class="max-w-xl mx-auto">
-        <input type="text" placeholder="Your Name" class="w-full mb-4 p-3 border rounded-lg" required>
-        <input type="email" placeholder="Your Email" class="w-full mb-4 p-3 border rounded-lg" required>
-        <textarea placeholder="Your Message" class="w-full mb-4 p-3 border rounded-lg" rows="4" required></textarea>
-        <button type="submit" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Send Message</button>
+  <section id="contact" class="py-20 bg-white">
+    <div class="container mx-auto px-4 text-center">
+      <h3 class="text-4xl font-bold text-indigo-700 mb-4">Let's Work Together</h3>
+      <p class="text-gray-600 mb-8 text-lg">Tell us about your project or request a free consultation.</p>
+      <form id="contactForm" class="max-w-xl mx-auto space-y-6">
+        <input type="text" id="name" placeholder="Your Name" class="form-input" required />
+        <input type="email" id="email" placeholder="Your Email" class="form-input" required />
+        <textarea id="message" placeholder="Your Message" class="form-input" rows="4" required></textarea>
+        <button type="submit" class="btn-primary">Send Message</button>
+        <p id="formMessage" class="mt-2 text-sm text-green-600 hidden">Thank you! We'll get back to you soon.</p>
       </form>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-200 text-center py-4">
-    <p>&copy; 2025 Scriptoria Research. All rights reserved.</p>
+  <footer class="bg-gray-200 py-6 text-center">
+    <p class="text-sm text-gray-700">&copy; 2025 Scriptoria Research. All rights reserved.</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
